# python

./: .gitignore  aws_terminate_all_runable_job.sh
lista/src/: criando100Arquivos.py  criando_100_arquivos.py  ex1.py  ex10.py  ex100.py  ex101.py  ex102.py  ex103.py  ex104.py  ex105.py  ex106.py  ex107.py  ex11.py  ex111.py  ex113.py  ex114.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex19.py  ex2.py  ex20.py  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex26.py  ex27.py  ex28.py  ex29.py  ex30.py  ex31.py  ex32.py  ex33.py  ex34.py  (+70 more)
magpi/: pyproject.toml  requirements.txt
magpi/magpi/: __init__.py
magpi/tests/: test_magpi.py
mundo1/: comandosBasicos.py  condicoesAninhadas.py  coresTerminal.py  ex1.py  ex2.py  ex3.py  ex5.py  ex6.py  ex7.py  ifsElsesCondicoes.py  manipulandoTexto.py  operadoresAritimeticos.py  teste.py  tiposPrimitivosSaidaDados.py  utilizandoModulos.py
mundo2/: condicoesAninhadas.py  estruturaControle.py  interrompendoRepeticoesWhile.py  whileDoWhile.py
mundo3/: dicionarios.py  execoes.py  funcoes.py  funcoespt2.py  listapt2.py  listas.py  modulos_pacotes.py  tuplas.py
orientacao_objetos/: conta.py  empty_objects.py  exec.py
orientacao_objetos/classes/: employee.py  teste.py
orientacao_objetos/enumerate/: enumerate_test.py
orientacao_objetos/magpi/: env.py  head.py
orientacao_objetos/modules/: employee.py  modules_tutorialspoint.py
trabalhando_arquivos/: escrita_arquivo.py  jogo_forca.py  lendo_arquivo.py  palavras.txt
zarc/: note_book.txt  zarc.postman_collection.json  zarc_links.txt
(+34 files in other folders)
