[tool.poetry]
name = "magpi"
version = "0.1.0"
description = ""
authors = ["Fernando Pimenta <fosilva@brasilseg.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.40"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
